# meterdatalogic

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml  test.yml.example
docs/: api-reference.md  data-structure-format.md  data_structure_format.md  examples.md  pricing_testing_plan.md  releasing-workflow.md  setup_environment.md
examples/: test_formats.ipynb  test_pricing.ipynb  test_scenario.ipynb  test_transform.ipynb  test_validation.ipynb  test_visualisation.ipynb
meterdatalogic/: __init__.py  canon.py  config.py  exceptions.py  formats.py  ingest.py  pricing.py  profiles.py  scenario.py  summary.py  transform.py  types.py  utils.py  validate.py
meterdatalogic/analytics/: __init__.py  pricing.py  scenario.py  summary.py  types.py
meterdatalogic/analytics/insights/: __init__.py  config.py  engine.py  evaluators_advanced.py  evaluators_basic.py  evaluators_intermediate.py  types.py
meterdatalogic/core/: __init__.py  canon.py  exceptions.py  transform.py  types.py  utils.py
meterdatalogic/insights/: config.py  engine.py  evaluators_advanced.py  evaluators_basic.py  evaluators_intermediate.py  types.py
meterdatalogic/io/: __init__.py  formats.py  ingest.py  types.py  validate.py
scripts/: bump_version.sh
src/meterdatalogic/: types.py
src/meterdatalogic/features/: summary.py
src/meterdatalogic/preprocess/: clean.py  resample.py
src/meterdatalogic/readers/: nem12.py
src/meterdatalogic/tariffs/: price_engine.py  schema.py  validators.py
tests/: conftest.py  test_canon.py  test_collapse_flows.py  test_formats.py  test_ingest.py  test_insights.py  test_pricing.py  test_scenarios.py  test_summary.py  test_summary_peak.py  test_tou_24h.py  test_transform.py  test_utils.py  test_validate.py
tests/notebooks/: test_refactor.ipynb  test_refactor2.ipynb
tests/unit/: conftest.py  test_nem12_parity.py  test_nem12_reader.py  test_preprocess.py  test_pricing_flat.py  test_semantics.py  test_summary.py
