[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meterdatalogic"
version = "0.1.4"
description = "Tiny meter data transforms, summaries, and pricing"
readme = "README.md"
requires-python = ">=3.10"

# Runtime deps
dependencies = [
  "pandas>=2.3.3",
  "numpy>=2.3.5",
  "nemreader>=0.9.2",
]

# Extras
[project.optional-dependencies]
nem12 = ["nemreader>=0.9.2"]
dev = [
  "pytest",
  "ruff",
  "ipykernel",
  "build",
  "plotly",
  "nbformat"
]

[tool.ruff]
line-length = 100
extend-exclude = [
  "examples",
  "**/*.ipynb",
]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py"]
