[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meterdatalogic"
version = "0.4.0"
description = "Tiny meter data transforms, summaries, and pricing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Tyler Harden", email = "hello@tylerharden.io"}
]
keywords = ["energy", "meter-data", "nem12", "pricing", "solar", "battery"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
]

# Runtime deps
dependencies = [
  "pydantic>=2.0.0",
  "polars>=1.40.1",
  "nemreader>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tylerharden/meterdatalogic"
Documentation = "https://github.com/tylerharden/meterdatalogic/tree/master/docs"
Repository = "https://github.com/tylerharden/meterdatalogic"
Issues = "https://github.com/tylerharden/meterdatalogic/issues"
Changelog = "https://github.com/tylerharden/meterdatalogic/blob/master/CHANGELOG.md"

# Package data - include type information
[tool.setuptools.package-data]
meterdatalogic = ["py.typed"]

# Extras
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "ipykernel",
  "build",
  "plotly",
  "nbformat",
  "twine",
]

[tool.ruff]
line-length = 100
extend-exclude = [
  "examples",
  "**/*.ipynb",
]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["meterdatalogic"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
